PyAMF Changelog
===============

This file contains information about the changes between the different
versions of PyAMF.

.. contents::

0.5 (unreleased)
----------------
 - Removed the useless pyamf.logging module (Ticket:577)
 - Added a new register_package helper function to make bulk class
   registration easier. Check the docstring for more info. (Ticket:576)
 - cpyamf.amf3._decode_int now propagates exceptions correctly (Ticket:506)
 - Fixed an incorrect OverflowError when encoding large integers in AMF3
   (Ticket:519)
 - Added `append` to pyamf.util.BufferedByteStream (Ticket:574)
 - Added Epydoc signatures to all util.StringIOProxy, util.DataTypeMixIn and
   util.BufferedByteStream classes (Ticket:440)
 - Removed dependancy on fpconst. Platforms with broken platforms are detected
   and handled correctly internally (Ticket:564)
 - amf0.Encoder now supports attribute ordering (Ticket:558)
 - Removed duplicate method Context.reset, in favour of Context.clear
   (Ticket:527)
 - Rewrote cpyamf.util.BufferedByteStream to not depend on cStringIO. Added a
   C based api for stream functions (Ticket:513)
 - Unified exceptions for BufferedByteStream so that only IOError is raised.
   (Ticket:520)
 - Made raising pyamf.ReferenceError optional for all Indexed* and Context
   classes. Refactored AMF3 so that only one ClassDefinition is created per
   class (Ticket:524)
 - Strict type checking now on pyamf.util.BufferedByteStream (Ticket:512)
 - Removed the default loggers from p.r.gateway.*. To re-enable supply a
   logger instance as a keyword arg to the gateway constructor (Ticket:525)
 - Removed pyamf.util.make_classic_instance (as it is not used) (Ticket:521)
 - Removed pyamf.util.get_mro, in favour of inspect.getmro (Ticket:526)
 - Removed pyamf.util.Indexed[Collection|Map].remove (Ticket:518)

0.4.2 (2009-04-20)
------------------
 - Support for decoding the 'source' property on ArrayCollections (Ticket:488)